Raywater arranged okay, but fix spacing.

--- a/css/project.css
+++ b/css/project.css
@@ -78,7 +78,7 @@ body {
     .project-content .image {
         /* width: 100%;
         height: 100%; */
-        width: 30em;
+        /* width: 30em; */
         margin: 0 auto;
         display: flex;
         /* align-items: center;
@@ -121,12 +121,12 @@ body {
     .grid-two-columns {
         display: grid;
         grid-template-columns: 1fr 1fr;
-        grid-gap: 1em;
+        grid-gap: 2em;
     }
     .grid-three-columns {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
-        grid-gap: 1em; 
+        grid-gap: 2em; 
     }
 
 
@@ -164,7 +164,8 @@ body {
     .project-content .info img {
         width: 100%;
     }
- 
+
+    
     .disclosure .process .grid-two-columns {
         padding: 1em 0;
     }
@@ -180,6 +181,19 @@ body {
     }
 
     
+
+    .raywater .process .grid-two-columns {
+        padding-bottom: 1em;
+    }
+    /* .raywater .full-img {
+        padding-bottom: 2em;
+    } */
+    .raywater .image {
+        padding-bottom: 3em;
+    }
+    .raywater .outcome {
+        padding-bottom: 10em;
+    }
 
 
 
